fix: 🚑️ map on desktop too small when
list is empty or not enough doctors filtered

--- a/src/layouts/Layout.module.css
+++ b/src/layouts/Layout.module.css
@@ -75,6 +75,7 @@
   .Layout > .MapSection {
     position: relative;
     grid-area: map;
+    height: calc(100dvh - var(--header-height-lg) * 2);
   }
 
   .Layout > .ListSection {
